Develop notebook code

--- a/wrangling.ipynb
+++ b/wrangling.ipynb
@@ -113,7 +113,9 @@
    "source": [
     "select_rows = merged_small.tail(n=18)\n",
     "print(max(merged_small['CONSEQUENCE']))\n",
-    "print(min(merged_small['CONSEQUENCE']))\n"
+    "print(min(merged_small['CONSEQUENCE']))\n",
+    "\n",
+    "merged_small.dtypes"
    ]
   },
   {
@@ -124,73 +126,73 @@
    "source": [
     "features_list = []\n",
     "\n",
-    "for index, row in select_rows.iterrows():\n",
+    "for index, row in merged_small.iterrows():\n",
     "    \n",
     "    # Initialize list of coordinate pairs for the row\n",
-    "    \n",
+    "    if type(row['GEOM_WKT']) == str:\n",
     "\n",
-    "    if row['GEOM_WKT'].startswith('LINESTRING'):\n",
-    "        # Get coordinates for a line string\n",
-    "        coordinates_str = re.findall('\\(([^)]+)', row['GEOM_WKT'])[0]\n",
-    "        coordinates_list = coordinates_str.split(\",\")\n",
-    "        \n",
-    "        linestring_list_of_coord_pairs = []\n",
-    "        for coordinate_pair in coordinates_list:\n",
-    "            float_pair = [float(val) for val in coordinate_pair.split()]\n",
-    "            linestring_list_of_coord_pairs.append(float_pair)\n",
-    "\n",
-    "        if linestring_list_of_coord_pairs:\n",
-    "            # create a json block for the linestring feature with coordinates and properties\n",
-    "            feature =  { \n",
-    "                \"type\": \"Feature\",\n",
-    "                \"geometry\": {\n",
-    "                    \"type\": \"LineString\",\n",
-    "                    \"coordinates\": linestring_list_of_coord_pairs \n",
-    "                    },\n",
-    "                \"properties\": {\n",
-    "                    \"STREETNAME\": row['STREETNAME'],\n",
-    "                    \"MINORGRIDNAME\": row['MINORGRIDNAME'],\n",
-    "                    \"CONSEQUENCE\": row['CONSEQUENCE']\n",
-    "                    }\n",
-    "                }\n",
-    "            features_list.append(feature)\n",
-    "                    \n",
-    "\n",
-    "    elif row['GEOM_WKT'].startswith('MULTILINESTRING'):\n",
-    "        # Get coordinates for a multi line string\n",
-    "        # remove leading parenthesis to make this regex happy\n",
-    "        mulitline_coordinates = row['GEOM_WKT'].replace(\"MULTILINESTRING (\", \"\")\n",
-    "        coordinates_lines = re.findall('\\(([^)]+)', mulitline_coordinates)\n",
-    "        multiline_string_list = []\n",
-    "        \n",
-    "        for line in coordinates_lines:\n",
-    "            line_split = line.split(\",\")\n",
-    "\n",
-    "            # temporary list to hold list of coordinates for a single line, will be contained in final list of lists\n",
-    "            coord_line_temp = []\n",
-    "            for coordinate_pair in line_split:\n",
-    "                float_pair = [float(val) for val in coordinate_pair.split()]\n",
-    "                coord_line_temp.append(float_pair)\n",
-    "            multiline_string_list.append(coord_line_temp)\n",
-    "\n",
+    "        if row['GEOM_WKT'].startswith('LINESTRING'):\n",
+    "            # Get coordinates for a line string\n",
+    "            coordinates_str = re.findall('\\(([^)]+)', row['GEOM_WKT'])[0]\n",
+    "            coordinates_list = coordinates_str.split(\",\")\n",
     "            \n",
-    "        if multiline_string_list:\n",
-    "            # confirm that there is a list of coordinate lines\n",
+    "            linestring_list_of_coord_pairs = []\n",
+    "            for coordinate_pair in coordinates_list:\n",
+    "                float_pair = [float(val) for val in coordinate_pair.split()]\n",
+    "                linestring_list_of_coord_pairs.append(float_pair)\n",
     "\n",
-    "            # create a json block for the multilinestring feature with coordinates and properties\n",
-    "            feature =  { \n",
-    "                \"type\": \"Feature\",\n",
-    "                \"geometry\": {\n",
-    "                    \"type\": \"MultiLineString\",\n",
-    "                    \"coordinates\": multiline_string_list \n",
-    "                    },\n",
-    "                \"properties\": {\n",
-    "                    \"STREETNAME\": row['STREETNAME'],\n",
-    "                    \"MINORGRIDNAME\": row['MINORGRIDNAME'],\n",
-    "                    \"CONSEQUENCE\": row['CONSEQUENCE']\n",
+    "            if linestring_list_of_coord_pairs:\n",
+    "                # create a json block for the linestring feature with coordinates and properties\n",
+    "                feature =  { \n",
+    "                    \"type\": \"Feature\",\n",
+    "                    \"geometry\": {\n",
+    "                        \"type\": \"LineString\",\n",
+    "                        \"coordinates\": linestring_list_of_coord_pairs \n",
+    "                        },\n",
+    "                    \"properties\": {\n",
+    "                        \"STREETNAME\": row['STREETNAME'],\n",
+    "                        \"MINORGRIDNAME\": row['MINORGRIDNAME'],\n",
+    "                        \"CONSEQUENCE\": float(row['CONSEQUENCE'])\n",
+    "                        }\n",
     "                    }\n",
-    "                }\n",
-    "            features_list.append(feature)\n"
+    "                features_list.append(feature)\n",
+    "                        \n",
+    "\n",
+    "        elif row['GEOM_WKT'].startswith('MULTILINESTRING'):\n",
+    "            # Get coordinates for a multi line string\n",
+    "            # remove leading parenthesis to make this regex happy\n",
+    "            mulitline_coordinates = row['GEOM_WKT'].replace(\"MULTILINESTRING (\", \"\")\n",
+    "            coordinates_lines = re.findall('\\(([^)]+)', mulitline_coordinates)\n",
+    "            multiline_string_list = []\n",
+    "            \n",
+    "            for line in coordinates_lines:\n",
+    "                line_split = line.split(\",\")\n",
+    "\n",
+    "                # temporary list to hold list of coordinates for a single line, will be contained in final list of lists\n",
+    "                coord_line_temp = []\n",
+    "                for coordinate_pair in line_split:\n",
+    "                    float_pair = [float(val) for val in coordinate_pair.split()]\n",
+    "                    coord_line_temp.append(float_pair)\n",
+    "                multiline_string_list.append(coord_line_temp)\n",
+    "\n",
+    "                \n",
+    "            if multiline_string_list:\n",
+    "                # confirm that there is a list of coordinate lines\n",
+    "\n",
+    "                # create a json block for the multilinestring feature with coordinates and properties\n",
+    "                feature =  { \n",
+    "                    \"type\": \"Feature\",\n",
+    "                    \"geometry\": {\n",
+    "                        \"type\": \"MultiLineString\",\n",
+    "                        \"coordinates\": multiline_string_list \n",
+    "                        },\n",
+    "                    \"properties\": {\n",
+    "                        \"STREETNAME\": row['STREETNAME'],\n",
+    "                        \"MINORGRIDNAME\": row['MINORGRIDNAME'],\n",
+    "                        \"CONSEQUENCE\": float(row['CONSEQUENCE'])\n",
+    "                        }\n",
+    "                    }\n",
+    "                features_list.append(feature)\n"
    ]
   },
   {
@@ -214,7 +216,7 @@
     "    }\n",
     "\n",
     "\n",
-    "with open(\"test_data/geojson-test.json\", \"w\") as write_file:\n",
+    "with open(\"test_data/allen-co-pipes.json\", \"w\") as write_file:\n",
     "    json.dump(geometries, write_file, indent=4)\n"
    ]
   },
